--- a/gestion_ville/templates/forms/modifier_demande.html
+++ b/gestion_ville/templates/forms/modifier_demande.html
@@ -1,7 +1,7 @@
-{% extends 'base.html' %}
+{% extends 'administrateur/dashboard.html' %}
 
 {% block body %}
-{% include "clinic/_modal.html" %}
+{% comment %} {% include "clinic/_modal.html" %} {% endcomment %}
 
         <div class="container-fluid">
         <div class="row">
