--- a/gestion_ville/templates/administrateur/dashboard.html
+++ b/gestion_ville/templates/administrateur/dashboard.html
@@ -45,15 +45,13 @@
 
                 </li>
                 <li  class="collapsed">
-                    <a class="m-link"  data-bs-toggle="collapse" data-bs-target="#project-Components" href="#">
+                    <a class="m-link"  data-bs-toggle="collapse" data-bs-target="#project-Components" href="{% url 'signalement_liste'%}">
                         <i class="icofont-briefcase"></i><span>Signalements</span><span class="arrow icofont-dotted-down ms-auto text-end fs-5"></span></a>
                     <!-- Menu: Sub menu ul -->
-                    {% comment %} <ul class="sub-menu collapse" id="project-Components">
-                        <li><a class="ms-link" href="projects.html"><span>Projects</span></a></li>
-                        <li><a class="ms-link" href="task.html"><span>Tasks</span></a></li>
-                        <li><a class="ms-link" href="timesheet.html"><span>Timesheet</span></a></li>
-                        <li><a class="ms-link" href="team-leader.html"><span>Leaders</span></a></li>
-                    </ul> {% endcomment %}
+                    <ul class="sub-menu collapse" id="project-Components">
+                        <li><a class="ms-link" href="{% url 'signalement_liste'%}"><span>Liste des Signalements</span></a></li>
+                        
+                    </ul> 
                 </li>
                 
                 <li class="collapsed">
