--- a/gestion_ville/templates/demandes/detail_demande.html
+++ b/gestion_ville/templates/demandes/detail_demande.html
@@ -24,7 +24,11 @@
                                     <div class="avatar lg  rounded-1 no-thumbnail bg-lightyellow color-defult"><i class="icofont-optic fs-4"></i></div>
                                     <div class="flex-fill ms-4 text-truncate">
                                         <div class="text-truncate">Status</div>
+                                        {% if demande.etat == "Non traité" %}
                                         <span class="badge bg-warning">In Progress</span>
+                                        {% else %}
+                                        <span class="badge bg-success">Completed</span>
+                                        {% endif %}
                                     </div>
                                     
                                 </div>
@@ -67,6 +71,10 @@
     </div>
 </div>
 
+
+{% if demande.etat == 'Non traité' %}
+<button type="button" class="btn btn-success rounded" onclick="window.location.href='{% url 'download_image' %}'"><i class="icofont-download text-bg-success"></i>Télécharger</button>
+
 <div class="row g-3 mb-3">
     <div class="col-md-12">
         <div class="card light-danger-bg">
@@ -80,7 +88,41 @@
                             <div class="col">
                                 <div class="card shadow">
                                     <div class="card-body text-center d-flex flex-column justify-content-center">
-                                        <img  src="{% static "assets/admin-assets/images/lg/avatar2.jpg" %}" alt="profile">
+                                        <img  src=" {% static "assets/img/nationalite.jpg" %}" alt="profile">
+                                        {% comment %} <img  src="{% static "assets/admin-assets/images/lg/avatar2.jpg" %}" alt="profile"> {% endcomment %}
+       
+                                    </div>
+                                    
+
+                                </div>
+                            </div>
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+    </div>
+</div><!-- Row End -->
+{% else %}
+<div></div>
+{% comment %} <div class="row g-3 mb-3">
+    <div class="col-md-12">
+        <div class="card light-danger-bg">
+            <div class="card-header py-3 d-flex justify-content-between bg-transparent border-bottom-0">
+                <h6 class="mb-0 fw-bold ">Les fichiers à récuperer </h6>
+            </div>
+            <div class="card-body">
+                <div class="row g-3 align-items-center">
+                    <div class="col-md-12 col-lg-12 col-xl-12 col-xxl-10">
+                        <div class="row g-3 row-cols-2 row-cols-sm-3 row-cols-md-3 row-cols-lg-3 row-cols-xl-3 row-cols-xxl-6 row-deck top-perfomer">
+                            <div class="col">
+                                <div class="card shadow">
+                                    <div class="card-body text-center d-flex flex-column justify-content-center">
+                                        <img  src="{{ demande.fichier.url }} " alt="profile">
+                                        {% comment %} <img  src="{% static "assets/admin-assets/images/lg/avatar2.jpg" %}" alt="profile"> 
+
                                         
                                     </div>
                                 </div>
@@ -92,6 +134,6 @@
             </div>
         </div>
     </div>
-</div><!-- Row End -->
-
+</div> {% endcomment %}
+{% endif %}
 {% endblock body %}
