--- a/gestion_ville/templates/signalement/liste_signalement.html
+++ b/gestion_ville/templates/signalement/liste_signalement.html
@@ -10,7 +10,7 @@
                 <div class="row align-items-center">
                     <div class="border-0 mb-4">
                         <div class="card-header py-3 no-bg bg-transparent d-flex align-items-center px-0 justify-content-between border-bottom flex-wrap">
-                            <h3 class="fw-bold mb-0">Liste des demandes</h3>
+                            <h3 class="fw-bold mb-0">Liste des signalements</h3>
                             <div class="col-auto d-flex w-sm-100">
                                 <button type="button" class="btn btn-dark btn-set-task w-sm-100" data-bs-toggle="modal" data-bs-target="#tickadd"><i class="icofont-plus-circle me-2 fs-6"></i>Add demande</button>
                             </div>
@@ -30,35 +30,32 @@
                                     <thead>
                                         <tr>
                                             <th>ID </th>
-                                            <th>Date</th>
-                                            <th>Type</th> 
-                                            <th>Auteur</th> 
-                                            <th>Status</th>   
+                                            <th>Type</th>
+                                            <th>Lieu</th> 
+                                            <th>Etat</th> 
+                                            <th>Date du signalement</th>   
                                             <th>Actions</th>  
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        {% for demande in demandes %}
+                                        {% for signalement in signalements %}
                                             <tr>
-                                                <td class="fw-bold text-secondary">{{ demande.id}}</td>
-                                                <td>{{ demande.date}}</td>
-                                                <td>{{ demande.type}}</td>
-                                                <td>
-                                                    <div class="d-flex align-items-center">
-                                                        <span>{{ demande.citoyen }}</span>
-                                                    </div>
-                                                </td>
+                                                <td class="fw-bold text-secondary">{{ signalement.id}}</td>
+                                                <td>{{ signalement.type_signalement}}</td>
+                                                <td>{{ signalement.lieu}}</td>
+                                                
                                                 {% comment %} <td><span class="badge bg-warning">In Progress</span></td> {% endcomment %}
-                                                {%  if demande.etat == "Non traité" %}
+                                                {%  if signalement.etat_signalement == "en cours" %}
                                                 <td><span class="badge bg-warning">In Progress</span></td>
                                                 {% else %}
                                                 <td><span class="badge bg-success">Completed</span></td>
                                                 {% endif %}
+                                                <td>{{ signalement.date_signalement }} </td>
                                                 <td> 
                                                     <div class="btn-group" role="group" aria-label="Basic outlined example">
-                                                        <a href="{% url 'detail_demande' demande.id %}" class="btn btn-outline-secondary"><i class="icofont-eye text-blue"></i></a>
-                                                        <a href="{% url 'modifier_demande' demande.id %}" class="btn btn-outline-secondary"><i class="icofont-edit text-success"></i></a>
-                                                        {% comment %} <button  type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#edittickit"><i class="icofont-edit text-success"></i></button> {% endcomment %}
+                                                        <a href="{% url 'localiser' signalement.id %}" class="btn btn-outline-secondary"><i class="icofont-google-map text-blue"></i></a>
+                                                        <a href="{%url 'signalement_detail' signalement.id %}" class="btn btn-outline-secondary"><i class="icofont-eye text-blue"></i></a>
+                                                        <button  type="button" class="btn btn-outline-secondary" data-bs-toggle="modal" data-bs-target="#edittickit"><i class="icofont-edit text-success"></i></button>
                                                         
                                                     </div>
                                                 </td>
@@ -129,6 +126,53 @@
                     <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Done</button>
                     <button type="submit" class="btn btn-primary">sent</button>
                 </div>
+            </div>
+            </div>
+        </div>
+
+        <!--Edit Tickit-->
+        <div class="modal fade" id="edittickit" tabindex="-1"  aria-hidden="true">
+            <div class="modal-dialog modal-dialog-centered modal-md modal-dialog-scrollable">
+            <div class="modal-content">
+                <form action="" method="post"><div class="modal-header">
+                    <h5 class="modal-title  fw-bold" id="edittickitLabel">Demande numéro:{{ demande.id}} </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="mb-3">
+                        <label for="sub1" class="form-label">Subject</label>
+                        <input type="text" class="form-control" id="sub1" value="punching time not proper">
+                    </div>
+                    <div class="deadline-form">
+                        <form>
+                            <div class="row g-3 mb-3">
+                                <div class="col">
+                                <label for="depone11" class="form-label">Assign Name</label>
+                                <input type="text" class="form-control" id="depone11" value="Victor Rampling">
+                                </div>
+                                <div class="col">
+                                <label for="deptwo56" class="form-label">Creted Date</label>
+                                <input type="date" class="form-control" id="deptwo56" value="2021-02-25">
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="mb-3">
+                        <label  class="form-label">Status</label>
+                        <select class="form-select">
+                            <option selected>Completed</option>
+                            <option value="1">In Progress</option>
+                            <option value="2">Wating</option>
+                            <option value="3">Decline</option>
+                        </select>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Done</button>
+                    <button type="submit" class="btn btn-primary">sent</button>
+                </div>
+
+                </form>
             </div>
             </div>
         </div>
