--- a/gestion_ville/templates/signalement/localiser.html
+++ b/gestion_ville/templates/signalement/localiser.html
@@ -1,7 +1,11 @@
-{% extends 'base.html' %}
+{% extends "administrateur/dashboard.html" %}
 
 {% block body %}
-{% include "clinic/_modal.html" %}
+
+{% comment %} {% extends 'base.html' %}
+
+{% block body %}
+{% include "clinic/_modal.html" %} {% endcomment %}
 
         <div class="container-fluid">
         <div class="row">
